--- a/RPI/rpiWebServer/templates/register.html
+++ b/RPI/rpiWebServer/templates/register.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
    <body>
       <table border = 1>
@@ -9,6 +8,7 @@
             </tr>
          {% endfor %}
       </table>
-      <p>Place your RFID Tags</p>
+      <p>Keep placing your RFIDs</p>
+      <button action = "http://localhost:5000/register" method = "GET">Enter new data</button>
    </body>
 </html>
