--- a/RPI/rpiWebServer/templates/register.html
+++ b/RPI/rpiWebServer/templates/register.html
@@ -1,5 +1,43 @@
 <html>
+   <head>
+   <style>
+table {
+  width:100%;
+}
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+table#t01 tr:nth-child(even) {
+  background-color: #eee;
+}
+table#t01 tr:nth-child(odd) {
+ background-color: #fff;
+}
+table#t01 th {
+  background-color: black;
+  color: white;
+}
+
+.btn {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+</style>
+</head>
    <body>
+      <div class="table-d">
       <table border = 1>
          {% for key, value in result.items() %}
             <tr>
@@ -8,7 +46,7 @@
             </tr>
          {% endfor %}
       </table>
-      <p>Keep placing your RFIDs</p>
-      <button action = "http://localhost:5000/register" method = "GET">Enter new data</button>
+      </div>
+      <button id="btn" action = "http://localhost:5000/register" method = "GET">Enter new data</button>
    </body>
 </html>
